--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 3.25)
 add_subdirectory(str_utils)
 add_subdirectory(logger)
 add_subdirectory(opengl_wrapper)
+add_subdirectory(filesystem)
