--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,3 +4,5 @@ add_subdirectory(str_utils)
 add_subdirectory(logger)
 add_subdirectory(opengl_wrapper)
 add_subdirectory(filesystem)
+add_subdirectory(math)
+add_subdirectory(renderer)
