--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -3,6 +3,6 @@ cmake_minimum_required(VERSION 3.25)
 add_executable(app main.cpp)
 find_package(GLEW REQUIRED)
 find_package(glfw3 REQUIRED)
-target_link_libraries(app PUBLIC filesystem logger opengl_wrapper str_utils compiler_flags GLEW::GLEW glfw)
+target_link_libraries(app PUBLIC math filesystem logger renderer opengl_wrapper str_utils compiler_flags GLEW::GLEW glfw)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
