moved more generic stuff away from opengl_wrapper

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,3 +6,5 @@ add_subdirectory(opengl_wrapper)
 add_subdirectory(filesystem)
 add_subdirectory(math)
 add_subdirectory(renderer)
+add_subdirectory(graphics)
+add_subdirectory(common)
