--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,10 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+configure_file(res/textures/ship.png textures/ship.png COPYONLY)
+configure_file(res/textures/diamond.png textures/diamond.png COPYONLY)
+configure_file(res/textures/fire.png textures/fire.png COPYONLY)
+
 add_subdirectory(src)
 add_subdirectory(app)
 
