moved windows and callbacks into their own class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(math)
 add_subdirectory(renderer)
 add_subdirectory(graphics)
 add_subdirectory(common)
+add_subdirectory(window_context)
