move opengl_wrapper under graphics_api

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,10 +2,9 @@ cmake_minimum_required(VERSION 3.25)
 
 add_subdirectory(str_utils)
 add_subdirectory(logger)
-add_subdirectory(opengl_wrapper)
 add_subdirectory(filesystem)
 add_subdirectory(math)
 add_subdirectory(renderer)
-add_subdirectory(graphics)
+add_subdirectory(graphics_api)
 add_subdirectory(common)
 add_subdirectory(window_context)
