--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(renderer)
 add_subdirectory(graphics_api)
 add_subdirectory(common)
 add_subdirectory(window_context)
+add_subdirectory(game)
