--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,5 +7,5 @@ add_subdirectory(math)
 add_subdirectory(renderer)
 add_subdirectory(graphics_api)
 add_subdirectory(common)
-add_subdirectory(window_context)
+add_subdirectory(io)
 add_subdirectory(game)
