abstract the texts

--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.25)
 
-add_library(game BackgroundCreation.cpp GameObject.cpp Camera.cpp)
-target_link_libraries(game PRIVATE logger compiler_flags math )
+find_package(imgui)
+add_library(game BackgroundCreation.cpp GameObject.cpp Camera.cpp TextWindows.cpp)
+target_link_libraries(game PRIVATE logger compiler_flags math imgui::imgui)
 target_include_directories(game INTERFACE "${PROJECT_SOURCE_DIR}/include" PRIVATE "${PROJECT_SOURCE_DIR}/include/game")
